XMLtoCSV/objects/unpackaged/objects/Sample_Limit_Transaction_vod__c.object
<CustomObject>
    <description>Sample Limit Transaction maintains and controls all transactional data related to a Sample Limit.  A Sample Limit Transaction is automatically created on Save (if configured), Sign, or Submit of a Call Report. Sample Limit Transaction records are only applied against a Sample Limit when generated by the application.</description>
    <fields>
        <fullName>Account_Id_vod__c</fullName>
        <description>Row ID for Account record for which the Sample Limit was applied.</description>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>Account for which the Sample Limit was applied.  Text value of Account Name.</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the account object</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Limits</relationshipLabel>
        <relationshipName>Sample_Limit_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_To_Disburse_vod__c</fullName>
        <description>Stores the amount entered by the user during the call</description>
        <label>Amount To Disburse</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call2_Id_vod__c</fullName>
        <description>Row ID for Call to which the Sample Limit was applied.</description>
        <label>Call Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_Sample_Id_vod__c</fullName>
        <description>Row ID for Call Sample to which the Sample Limit was applied</description>
        <label>Call Sample Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Call for which the Sample Limit was applied.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Sample Limit Transactions</relationshipLabel>
        <relationshipName>Sample_Limit_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Name_vod__c</fullName>
        <description>Call to which the Sample Limit was applied.  Text value of Call Name.</description>
        <label>Call Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursed_Amount_vod__c</fullName>
        <description>Stores the disbursed amount for the Sample Limit applied in the Call Report</description>
        <label>Disbursed Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Quantity_vod__c</fullName>
        <description>Value of the Sample Limit Disbursed Quantity field at the time the Sample Limit Transaction record was created.</description>
        <label>Disbursed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>End Date for the Sample Limit record applied to the specified Call record.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enforce_Limit_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enforce Limit flag value for the Sample Limit applied to the specified Call record.</description>
        <label>Enforce Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>Customer designated unique identifier for the record.</description>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id_vod__c</fullName>
        <description>Group ID for the Sample Limit applied to the specified Call record.</description>
        <externalId>true</externalId>
        <label>Group Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Amount_vod__c</fullName>
        <description>Stores the limit amount for the Sample Limit applied in the Call Report</description>
        <label>Limit Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limit_Per_Call_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether the rule applies per call or not.</description>
        <label>Limit Per Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_Quantity_vod__c</fullName>
        <description>Limit Quantity for the Sample Limit applied to the specified Call record.</description>
        <label>Limit Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_vod__c</fullName>
        <description>Lot Number for the sample line item on the Call record.</description>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id_vod__c</fullName>
        <description>Row ID for Product record for which the Sample Limit was applied.</description>
        <label>Product Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_vod__c</fullName>
        <description>Product for which the Sample Limit was applied.  Text value of Product Name.</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Product Catalog</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Sample Limits</relationshipLabel>
        <relationshipName>Sample_Limit_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Disperse_vod__c</fullName>
        <description>The quantity entered by the user for the sample line item on the Call record to which the Sample Limit was applied.</description>
        <label>Quantity To Disburse</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_vod__c</fullName>
        <description>Source of Sample Limit Transaction.</description>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Amount_vod__c</fullName>
        <description>Stores the current remaining amount for the Sample Limit applied in the Call Report</description>
        <label>Remaining Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity_vod__c</fullName>
        <description>Value of the Sample Limit Remaining Quantity field at the time the Sample Limit Transaction record was created.</description>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Limit_Id_vod__c</fullName>
        <description>Row ID for Sample Limit record applied to the transaction.</description>
        <label>Sample Limit Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Limit_Name_vod__c</fullName>
        <description>Sample Limit applied to the transaction.  Text value of Sample Limit Name.</description>
        <label>Sample Limit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Limit_Type_vod__c</fullName>
        <description>Type of Sample Limit applied to the transaction.  Available types are Account-User, Account, and User.</description>
        <label>Sample Limit Type</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sample_Limit_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Limit applied to the transaction.</description>
        <label>Sample Limit</label>
        <referenceTo>Sample_Limit_vod__c</referenceTo>
        <relationshipLabel>Sample Limit Transactions</relationshipLabel>
        <relationshipName>Sample_Limit_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start Date for the Sample Limit record applied to the specified Call record.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Id_vod__c</fullName>
        <description>Row ID for User record for which the Sample Limit was applied.</description>
        <label>User Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name_vod__c</fullName>
        <description>User for which the Sample Limit was applied.  Text value of User Name.</description>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to User Object</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Limits_Transaction_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sample Limit Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLT-{0000000000}</displayFormat>
        <label>Sample Limit Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Limit Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>